page layout bugs fix

--- a/frontend/web/css/site-test.css
+++ b/frontend/web/css/site-test.css
@@ -6,11 +6,12 @@ body {
 .page-wrap{
     flex: 1 0 auto;
     min-height: 100vh;
+    padding-top: 20px;
 }
 
 .wrap {
     height: auto;
-    padding: 0 0 60px;
+    padding: 0 0 50px;
 }
 
 .wrap > .container {
