--- a/frontend/web/css/vo.css
+++ b/frontend/web/css/vo.css
@@ -5,7 +5,7 @@ body {
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  padding-top: 15px;
+/*   padding-top: 15px; */
 }
 
 .text-muted {
